cambio en Index

--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@
 
                 <label id = "Show_buildings_with_data_of" class="control-label gray-tooltip">Tipo de información:</label>
                 <select id="building_opt" class="form-control selectWidth controls">
-                    <option value="electric" selected>Generación</option>
-                    <option value="chilled water">Capacidad</option>
-                    <option value="steam">Porcentaje de Electrificación</option>
+                    <option value="electric" selected>Generación por entidad federativa</option>
+                    <option value="chilled water">Capacidad por entidad federativa</option>
+                    <option value="steam">Porcentaje de electrificación</option>
                     <option value="all">Estado de Puebla</option>
                 </select>
 
@@ -258,7 +258,7 @@
             <div align = "left">
                 El coeficiente de determinación R2 es una medida estadística de qué tan bien la línea de regresión se aproxima a los puntos de datos reales. Un R2 de 1 indica que la línea de regresión se ajusta perfectamente a los datos.
                 <hr>
-                Según las observaciones realizadas en la inverstigación, el consumo eléctrico no tiene una fuerte relación lineal con el clima. El consumo de agua enfriada está fuertemente correlacionado con los grados de enfriamiento y el de vapor con los grados de calentamiento. Revisa el proyecto desarrollado aquí
+                Según las observaciones realizadas en la inverstigación, la generación eléctrica mediente energias  tiene una fuerte relación lineal con el clima. El consumo de agua enfriada está fuertemente correlacionado con los grados de enfriamiento y el de vapor con los grados de calentamiento. Revisa el proyecto desarrollado aquí
                 <a href = "http://nbviewer.ipython.org/github/cs109-energy/cs109-energy.github.io/blob/master/iPython/Data%20Wrangling.ipynb" target="_blank">here</a>
                 para .
 
