cambio en index estudio explorativa

--- a/index.html
+++ b/index.html
@@ -242,12 +242,12 @@
                 <span> - Energía mensual vs.</span>
                     </span>
                 <select id="explore1Vis_x_opt"  class="form-control selectWidth controls" style="text-transform:capitalize">
-                    <option value ="temperature" >Temperatura</option>
-                    <option value ="dehumidification">Deshumidificación</option>
-                    <option value="cooling degrees" selected>Grados de enfriamiento</option>
-                    <option value="heating degrees">Grados de calentamientos</option>
-                    <option value="solar radiation">Radiación Solar</option>
-                    <option value="wind speed">Velocidad del aire</option>
+                    <option value ="temperature" >Hidroeléctrica</option>
+                    <option value ="dehumidification">Geotermica</option>
+                    <option value="cooling degrees" selected>Eólica total</option>
+                    <option value="heating degrees">Ciclo combinado</option>
+                    <option value="solar radiation">Fotovoltaica</option>
+                    <option value="wind speed">Eólica por CFE</option>
                 </select>
             </form>
         </div>
