cambio en index opciones explorativa

--- a/index.html
+++ b/index.html
@@ -244,10 +244,13 @@
                 <select id="explore1Vis_x_opt"  class="form-control selectWidth controls" style="text-transform:capitalize">
                     <option value ="temperature" >Hidroeléctrica</option>
                     <option value ="dehumidification">Geotermica</option>
-                    <option value="cooling degrees" selected>Eólica total</option>
-                    <option value="heating degrees">Ciclo combinado</option>
-                    <option value="solar radiation">Fotovoltaica</option>
-                    <option value="wind speed">Eólica por CFE</option>
+                    <option value ="cooling degrees" selected>Eólica total</option>
+                    <option value ="heating degrees">Ciclo combinado</option>
+                    <option value ="solar radiation">Fotovoltaica</option>
+                    <option value ="wind speed">Eólica por CFE</option>
+                    <option value ="min temperature">Eólica por PIE</option>
+                    <option value ="wind speed">Eólica por CFE</option>
+                    <option value ="max temperature">Termoelectrica</option>
                 </select>
             </form>
         </div>
