--- a/index.html
+++ b/index.html
@@ -141,16 +141,13 @@
                 <select id="building_opt" class="form-control selectWidth controls">
                     <option value="electric" selected>Generación por entidad federativa</option>
                     <option value="chilled water">Capacidad por entidad federativa</option>
-                    <option value="steam">Porcentaje de electrificación</option>
-                    <option value="all">Estado de Puebla</option>
+                    <option value="all">Todos los datos</option>
                 </select>
 
                 <label id = "Select_energy_type" class="control-label gray-tooltip">Selecciona el tipo de energía:</label>
                 <select id="energy_opt" class="form-control selectWidth controls">
-                    <option value="electric" selected>Generación total</option>
-                    <option value="chilled water">Termoelectrica</option>
-                    <option value="steam">Eólica</option>
-                    <option value="HiDrO">Hidroeléctrica</option>
+                    <option value="electric" selected>Generación bruta por entidad federativa</option>
+                    <option value="chilled water">Capacidad instalada por entidad federativa</option>
                 </select>
 
                 <label id = "Filter_buildings_by_function" class="control-label gray-tooltip" >Filtrar por regiones del SEN:</label>
