cambio en index

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
         <div class="col-md-8" id="explore1Vis">
             <form class="form-inline" style="text-transform:capitalize">
                 <span id="Monthly_energy_use_vs" class = "gray-tooltip">
-                <span id="buildingName_explore1Vis">Puebla</span>
+                <span id="buildingName_explore1Vis">All</span>
                 <span> - Energía mensual vs.</span>
                     </span>
                 <select id="explore1Vis_x_opt"  class="form-control selectWidth controls" style="text-transform:capitalize">
