cambio en titulo "referencias"

--- a/index.html
+++ b/index.html
@@ -84,16 +84,17 @@
 <body>
 <div class="container" style="text-align :center">
 
-    <div style="background-color: rgba(255, 255, 255, 0.367); padding-bottom: 0px" class="navbar-fixed-top">
+    <div style="background-color: rgb(255, 255, 255); padding-bottom: 0px" class="navbar-fixed-top">
         <h1>Sistema de Información Energética</h1>
 
 
         <div class="row">
-            <p> La siguiente visualización muestra la generacióny la capacidad de energía por entidad federativa en México. | <a href="#" id="Read_me" data-toggle="modal"
-                                 data-target="#readMeModal">Instrucciones</a> |
+            <p> La siguiente herramienta visualiza datos obtenidos de páginas oficiales mexicanas. 
+                | <a href="#" id="Read_me" data-toggle="modal" data-target="#readMeModal">Instrucciones</a> |
                 <!--a href="#" id="disclaimer" data-toggle="modal"
                    data-target="#disclaimerModal">Disclaimer</a-->
                 <a href="https://github.com/SCastillo14/Energy-Visualization/blob/main/readme.md" target="_blank" id="Youtube_demo">Repositorio Github</a>
+                <a href="https://www.datos.gob.mx/busca/organization/sener" target="_blank" id="">Datos Abiertos SENER</a>
             </p>
         </div>
 
