se cambiaron todos los datos de Chilled Water por Capacidad

--- a/index.html
+++ b/index.html
@@ -143,14 +143,14 @@
                 <label id = "Show_buildings_with_data_of" class="control-label gray-tooltip">Tipo de información:</label>
                 <select id="building_opt" class="form-control selectWidth controls">
                     <option value="generacion" selected>Generación por entidad federativa</option>
-                    <option value="chilled water">Capacidad por entidad federativa</option>
+                    <option value="Capacidad">Capacidad por entidad federativa</option>
                     <option value="all">Todos los datos</option>
                 </select>
 
                 <label id = "Select_energy_type" class="control-label gray-tooltip">Selecciona el tipo de energía:</label>
                 <select id="energy_opt" class="form-control selectWidth controls">
                     <option value="generacion" selected>Generación bruta por entidad federativa</option>
-                    <option value="chilled water">Capacidad instalada por entidad federativa</option>
+                    <option value="Capacidad">Capacidad instalada por entidad federativa</option>
                 </select>
 
                 <label id = "Filter_buildings_by_function" class="control-label gray-tooltip" >Filtrar por regiones del SEN:</label>
