Cambio de variable a Gen Eólica CFE

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                     <option value ="cooling degrees" selected>Eólica total</option>
                     <option value ="heating degrees">Ciclo combinado</option>
                     <option value ="solar radiation">Fotovoltaica</option>
-                    <option value ="wind speed">Eólica por CFE</option>
+                    <option value ="Gen Eólica CFE">Eólica por CFE</option>
                     <option value ="min temperature">Eólica por PIE</option>
                     <option value ="max temperature">Termoelectrica</option>
                 </select>
