--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <link rel="shortcut icon" href="icon.png">
+    <link rel="shortcut icon" href="data/jason/icon.png">
     <title>Sistema de Información Energética</title>
 
 
