cambio en cooling degrees por Generación eólica total

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                 <select id="explore1Vis_x_opt"  class="form-control selectWidth controls" style="text-transform:capitalize">
                     <option value ="temperature" >Hidroeléctrica</option>
                     <option value ="dehumidification">Geotermica</option>
-                    <option value ="cooling degrees" selected>Eólica total</option>
+                    <option value ="Generación eólica total" selected>Eólica total</option>
                     <option value ="heating degrees">Ciclo combinado</option>
                     <option value ="solar radiation">Fotovoltaica</option>
                     <option value ="wind speed">Eólica por CFE</option>
