cambio en max temperature por Termoeléctrica

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                     <option value ="solar radiation">Fotovoltaica</option>
                     <option value ="wind speed">Eólica por CFE</option>
                     <option value ="min temperature">Eólica por PIE</option>
-                    <option value ="max temperature">Termoelectrica</option>
+                    <option value ="Termoeléctrica">Termoelectrica</option>
                 </select>
             </form>
         </div>
