--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                 <span> - Energía mensual vs.</span>
                     </span>
                 <select id="explore1Vis_x_opt"  class="form-control selectWidth controls" style="text-transform:capitalize">
-                    <option value ="temperature" >Hidroeléctrica</option>
+                    <option value ="Hidroeléctrica" >Hidroeléctrica</option>
                     <option value ="dehumidification">Geotermica</option>
                     <option value ="Generación eólica total" selected>Eólica total</option>
                     <option value ="heating degrees">Ciclo combinado</option>
@@ -255,7 +255,7 @@
             </form>
         </div>
         <div class="col-md-4" >
-            <div><br>Linear Regression Results</div>
+            <div><br>Resultado Regresión Lineal </div>
             <div align = "left" id = "explore1Equation"></div>
             <hr>
             <div align = "left">
@@ -308,7 +308,7 @@
             var rank_vis = new RankVis(d3.select("#rankVis"), monthlyEnergy, option, MyEventHandler);
             var energy_vis = new EnergyVis(d3.select("#energyVis"), monthlyEnergy, option, MyEventHandler);
 
-            var temp_vis = new WeatherVis(d3.select("#tempVis"), weather, "Temperature", MyEventHandler);
+            var temp_vis = new WeatherVis(d3.select("#tempVis"), weather, "Hidroeléctrica", MyEventHandler);
             var solar_vis = new WeatherVis(d3.select("#solarVis"), weather, "Solar", MyEventHandler);
             var wind_vis = new WeatherVis(d3.select("#windVis"), weather, "Wind", MyEventHandler);
 
