cambio en referencia

--- a/index.html
+++ b/index.html
@@ -261,10 +261,11 @@
             <div align = "left">
                 El coeficiente de determinación R2 es una medida estadística de qué tan bien la línea de regresión se aproxima a los puntos de datos reales. Un R2 de 1 indica que la línea de regresión se ajusta perfectamente a los datos.
                 <hr>
-                Según las observaciones realizadas en la inverstigación, la generación eléctrica mediente energias  tiene una fuerte relación lineal con el clima. El consumo de agua enfriada está fuertemente correlacionado con los grados de enfriamiento y el de vapor con los grados de calentamiento. Revisa el proyecto desarrollado aquí
-                <a href = "http://nbviewer.ipython.org/github/cs109-energy/cs109-energy.github.io/blob/master/iPython/Data%20Wrangling.ipynb" target="_blank">here</a>
-                para .
-
+                Según las observaciones realizadas en la inverstigación, la generación eléctrica mediente energías limpias tiene una creciente relación lineal con la generación. Las generación de energía por fuentes convencionales sigue teniendo una mayor relación con la generación bruta total en Mexico. Revisa el proyecto desarrollado aquí
+                <a href = "https://github.com/SCastillo14/Energy-Visualization" target="_blank">aquí</a>
+                El uso, reproducción, distribución y modificación de este código está sujeto a los términos y condiciones de la licencia MIT, disponible en.
+                <a href = "http://www.opensource.org/licenses/mit-license.php" target="_blank">aquí</a>
+                Se siguió la plantilla de desarrollo de los autores Benjamin Norman | Bing Wang | Bin Yan.
             </div>
         </div>
     </div>
