cambio "heating degrees" por "Ciclo Combinado"

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                     <option value ="Hidroeléctrica" >Hidroeléctrica</option>
                     <option value ="dehumidification">Geotermica</option>
                     <option value ="Generación eólica total" selected>Eólica total</option>
-                    <option value ="heating degrees">Ciclo combinado</option>
+                    <option value ="Ciclo Combinado">Ciclo combinado</option>
                     <option value ="solar radiation">Fotovoltaica</option>
                     <option value ="wind speed">Eólica por CFE</option>
                     <option value ="min temperature">Eólica por PIE</option>
