--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                     <option value ="dehumidification">Geotermica</option>
                     <option value ="Generación eólica total" selected>Eólica total</option>
                     <option value ="Ciclo Combinado">Ciclo combinado</option>
-                    <option value ="solar radiation">Fotovoltaica</option>
+                    <option value ="Fotovoltaica">Fotovoltaica</option>
                     <option value ="wind speed">Eólica por CFE</option>
                     <option value ="min temperature">Eólica por PIE</option>
                     <option value ="Termoeléctrica">Termoelectrica</option>
