Cambio en index en Occidental

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 <label id = "Filter_buildings_by_function" class="control-label gray-tooltip" >Filtrar por regiones del SEN:</label>
                 <select id="function_opt" class="form-control selectWidth controls">
                     <option value="all" selected>Todos</option>
-                    <option value="atheletics">Occidental</option>
+                    <option value="Occidental">Occidental</option>
                     <option value="dining service">Baja California</option>
                     <option value="dormitory">Noroeste</option>
                     <option value="gym">Baja California Sur</option>
