Cambio en index Filter_buildings

--- a/index.html
+++ b/index.html
@@ -158,13 +158,13 @@
                 <select id="function_opt" class="form-control selectWidth controls">
                     <option value="all" selected>Todos</option>
                     <option value="Occidental">Occidental</option>
-                    <option value="dining service">Baja California</option>
-                    <option value="dormitory">Noroeste</option>
-                    <option value="gym">Baja California Sur</option>
+                    <option value="Baja California">Baja California</option>
+                    <option value="Noroeste">Noroeste</option>
+                    <option value="Baja California Sur">Baja California Sur</option>
                     <option value="lab">Oriental</option>
-                    <option value="library">Norte</option>
-                    <option value="office">Peninsular</option>
-                    <option value="residential">Central</option>
+                    <option value="Norte">Norte</option>
+                    <option value="Peninsular">Peninsular</option>
+                    <option value="Central">Central</option>
                 </select>
 
             </form>
