--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                     <option value="Baja California">Baja California</option>
                     <option value="Noroeste">Noroeste</option>
                     <option value="Baja California Sur">Baja California Sur</option>
-                    <option value="lab">Oriental</option>
+                    <option value="Oriental">Oriental</option>
                     <option value="Norte">Norte</option>
                     <option value="Peninsular">Peninsular</option>
                     <option value="Central">Central</option>
@@ -261,7 +261,7 @@
             <div align = "left">
                 El coeficiente de determinación R2 es una medida estadística de qué tan bien la línea de regresión se aproxima a los puntos de datos reales. Un R2 de 1 indica que la línea de regresión se ajusta perfectamente a los datos.
                 <hr>
-                Según las observaciones realizadas en la inverstigación, la generación eléctrica mediente energías limpias tiene una creciente relación lineal con la generación. Las generación de energía por fuentes convencionales sigue teniendo una mayor relación con la generación bruta total en Mexico. Revisa el proyecto desarrollado aquí
+                Según las observaciones realizadas en la inverstigación, la generación eléctrica mediente energías limpias tiene una creciente relación lineal con la generación total. La generación de energía por fuentes convencionales sigue teniendo una mayor relación con la generación bruta total en Mexico. Revisa el proyecto desarrollado aquí
                 <a href = "https://github.com/SCastillo14/Energy-Visualization" target="_blank">aquí</a>
                 El uso, reproducción, distribución y modificación de este código está sujeto a los términos y condiciones de la licencia MIT, disponible en.
                 <a href = "http://www.opensource.org/licenses/mit-license.php" target="_blank">aquí</a>
